--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/img/nerdhive-logo-dark.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NerdHive</title>
+    <meta name="description" content="NerdHive - Connect with developers, collaborate on projects, and build your tech network" />
+    <title>NerdHive | Developer Community</title>
   </head>
   <body>
     <div id="root"></div>
